Add: development guide